--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Manpreet Singh",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1"
   },
   "devDependencies": {
@@ -19,6 +22,7 @@
     "@types/node": "^25.0.3",
     "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
+    "prisma": "^7.2.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
