--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "socket.io": "^4.8.2"
+    "jsonwebtoken": "^9.0.3",
+    "socket.io": "^4.8.2",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@prisma/client": "^6.15.0",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
-    "prisma": "^7.2.0",
+    "prisma": "^6.15.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
