--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "socket.io": "^4.8.2",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@prisma/client": "^6.15.0",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
