--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Backend for Qure App for Realtime Clinic Queue Management",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon --watch src --exec tsx src/index.ts"
+    "dev": "nodemon --watch src --exec tsx src/index.ts",
+    "db:generate": "prisma generate"
   },
   "author": "Manpreet Singh",
   "license": "ISC",
