--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon --watch src --exec tsx src/index.ts",
-    "db:generate": "prisma generate"
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev"
   },
   "author": "Manpreet Singh",
   "license": "ISC",
