--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "bcryptjs": "^3.0.3",
+    "bullmq": "^5.66.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^5.2.1",
+    "express-fileupload": "^1.5.2",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
     "socket.io": "^4.8.2",
     "zod": "^4.2.1"
@@ -24,6 +28,7 @@
   "devDependencies": {
     "@prisma/client": "^6.15.0",
     "@types/express": "^5.0.6",
+    "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
