--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon --watch src --exec tsx src/index.ts",
+    "build": "tsc -p .",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev"
   },
@@ -31,6 +32,7 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@types/ws": "^8.18.1",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
