--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "Backend for Qure App for Realtime Clinic Queue Management",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon --watch src --exec tsx src/index.ts",
+    "dev": "node dist/index.js",
     "build": "tsc -p .",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev"
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate dev"
   },
   "author": "Manpreet Singh",
   "license": "ISC",
