--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node dist/index.js",
     "build": "tsc -p .",
     "db:generate": "npx prisma generate",
-    "db:migrate": "npx prisma migrate dev"
+    "db:migrate": "npx prisma migrate dev",
+    "image:worker": "node dist/workers/image.upload.worker.js"
   },
   "author": "Manpreet Singh",
   "license": "ISC",
