--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "qure-backend",
-  "type": "module",
   "version": "1.0.0",
   "description": "Backend for Qure App for Realtime Clinic Queue Management",
   "main": "src/index.ts",
@@ -15,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.3",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-fileupload": "^1.5.2",
     "ioredis": "^5.8.2",
@@ -28,13 +29,12 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@prisma/client": "^6.15.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/ws": "^8.18.1",
-    "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
     "prisma": "^6.15.0",
