--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^6.15.0",
+    "@types/node-cron": "^3.0.11",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.3",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-fileupload": "^1.5.2",
     "file-type": "^21.2.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
+    "node-cron": "^4.2.1",
     "sharp": "^0.34.5",
     "socket.io": "^4.8.2",
     "zod": "^4.2.1"
