--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+    networks:
+      - qure-network
     volumes:
       - redis_data:/data
     restart: unless-stopped
@@ -16,6 +18,8 @@ services:
     command: npm run dev
     ports:
       - "8080:8080"
+    networks:
+      - qure-network
     env_file:
       - .env
     restart: unless-stopped
@@ -26,6 +30,8 @@ services:
     image: manpreet3033/qure-backend
     container_name: image-worker
     command: npm run image:worker
+    networks:
+      - qure-network
     env_file:
       - .env
     restart: unless-stopped
@@ -34,3 +40,7 @@ services:
 
 volumes:
   redis_data:
+
+networks:
+  qure-network:
+    driver: bridge
